# MTClaw

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  restart_all.sh
docs/: adding-tools.md  config.md  openclaw-session-header-patch.md
docs/benchmarks/openclaw-function-router-0308/: tasks.csv
docs/benchmarks/openclaw-function-router-0308/exp1-openclaw-doubao/: report.txt  results.csv
docs/benchmarks/openclaw-function-router-0308/exp2-openclaw-doubao-fr-permissive/: report.txt  results.csv
docs/benchmarks/openclaw-function-router-0308/exp3-openclaw-doubao-fr-strict/: report.txt  results.csv
examples/: config.example.json  functions.example.jsonl
examples/scripts/: display_control.sh  power_control.sh  system_control.sh  system_settings.sh  vlc_control.sh  wallpaper_control.sh  wifi_bluetooth_control.sh
function_router/: __init__.py  builtin_tools.py  function-builtin.jsonl  server.py
openclaw_function_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/session-bridge/: index.ts  openclaw.plugin.json  package.json
scripts/: install.sh  patch-openclaw-session-header.sh  restart.sh  uninstall.sh
tests/: conftest.py  test_config.py  test_extract.py  test_install_script.py  test_routing.py  test_tools.py
